--- a/desafios/modulo03/d012/assets/css/style.css
+++ b/desafios/modulo03/d012/assets/css/style.css
@@ -30,7 +30,7 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 10vw;
+    font-size: 8vw;
     /* font-size: 10vw = viewport width - 10% da largura da tela */
     /* text-transform: uppercase = Coloca todas as letras em maiusculo */ 
 }
@@ -55,7 +55,11 @@ section {
     padding-left: 30px;
     line-height: 2em;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 2.8vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -66,12 +70,25 @@ section.normal {
 section.imagem {
     background-color: rgb(39, 38, 38);
     color: white;
+    box-shadow: inset 6px 6px 13px 0 rgba(0, 0, 0, 0.418); /* sombra de caixa para dentro */
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.301);
+    background-color: rgba(0, 0, 0, 0.555);
+    text-shadow: 1px 1px 0 black;
+}
+
+section#img01 {
+    background-image: url('../imgs/background001.jpg');
+    background-position: center center;
+}
+
+section#img02 {
+    background-image: url('../imgs/background002.jpg');
 }
 
 footer {
