--- a/exercicios/modulo04/ex026/mq002/css/style.css
+++ b/exercicios/modulo04/ex026/mq002/css/style.css
@@ -1,1 +1,19 @@
 @charset "UTF-8";
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+}
+
+h1 {
+    color: whitesmoke;
+    text-shadow: 3px 3px 0 #15238b;
+    padding: 10px   ;
+}
