--- a/exercicios/modulo04/ex026/mq002/css/paisagem.css
+++ b/exercicios/modulo04/ex026/mq002/css/paisagem.css
@@ -2,3 +2,7 @@
 
 /* APARELHO DEITADO (LANDSCAPE) */
 
+body {
+    background-image: url(../img/cev-landscape.jpg);
+    background-position: left bottom;
+}
