--- a/exercicios/modulo04/ex026/mq002/css/retrato.css
+++ b/exercicios/modulo04/ex026/mq002/css/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* APARELHO EM PE (PORTRAIT) */
+
+body {
+    background-image: url(../img/cev-portrait.jpg);
+    background-position: center bottom;
+}
