--- a/exercicios/modulo04/ex026/mq002/css/style.css
+++ b/exercicios/modulo04/ex026/mq002/css/style.css
@@ -10,10 +10,12 @@ html, body {
     width: 100vw;
     height: 100vh;
     background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 h1 {
     color: whitesmoke;
     text-shadow: 3px 3px 0 #15238b;
-    padding: 10px   ;
+    padding: 10px;
 }
